# Furnix

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
3dpart/muparser-2.3.5/.build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Continuous.vcxproj  Continuous.vcxproj.filters  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  example1.vcxproj  example1.vcxproj.filters  example2.vcxproj  example2.vcxproj.filters  muParserProject.sln  muparser.vcxproj  muparser.vcxproj.filters  t_ParserTest.vcxproj  t_ParserTest.vcxproj.filters
methods/: ledebour_method.yaml  pavlov_method.yaml  pavlov_method_test.yaml
src/: common_constants.h
src/application/presenter/: main_presenter.cpp  main_presenter.h
src/application/view/: input_parameters_widget.h  main_window.h  main_window.ui  output_parameters_widget.cpp  output_parameters_widget.h
src/application/view/factories/: component_factory.h
src/application/view/pages/furnace_profile/: furnace_profile_page.cpp  furnace_profile_page.h  furnace_profile_presenter.cpp  furnace_profile_presenter.h
src/core/: application_controller.cpp  application_controller.h  furnace_parameter_calculator.cpp  furnace_parameter_calculator.h
src/core/canvas/: zoom_graphics_view.cpp  zoom_graphics_view.h
src/core/entity/: calculation_method.h  furnace_param_method.h  input_param_method.cpp  input_param_method.h  output_param_method.cpp  output_param_method.h
src/core/graphics/: base_furnace_part_item.cpp  base_furnace_part_item.h  furnace_bloom_item.cpp  furnace_bloom_item.h  furnace_part_item.h  furnace_profile_item.h  furnace_runner_item.cpp  furnace_runner_item.h  furnace_shaft_item.cpp  furnace_shaft_item.h  furnace_shoulder_item.cpp  furnace_shoulder_item.h  furnace_tapping_item.cpp  furnace_tapping_item.h
src/core/grid/: grid_scene.cpp  grid_scene.h
src/core/models/: calculation_method_data.h  furnace_profile_param.h  output_parameters_data.h
src/core/yaml/: yaml_deserializer.h
src/entity/: calculation_method.cpp  calculation_method.h  furnace_param_method.cpp
src/graphics/: furnace_bloom_item.cpp  furnace_bloom_item.h  furnace_part_item.cpp  furnace_part_item.h  furnace_part_tooltip.cpp  furnace_part_tooltip.h  furnace_profile_item.cpp  furnace_profile_item.h  furnace_runner_item.cpp  furnace_runner_item.h  furnace_shaft_item.cpp  furnace_shaft_item.h  furnace_shoulder_item.cpp  furnace_shoulder_item.h  furnace_tapping_item.cpp  furnace_tapping_item.h
src/infrastructure/loaders/: furnace_profile_loader.cpp  furnace_profile_loader.h
src/infrastructure/scanner/: methods_scanner.cpp  methods_scanner.h
src/interfaces/: i_canvas_view.h  i_input_param_view.h  i_main_window_view.h  i_methods_view.h
src/models/: formula_parameters_data.h  furnace_profile_param.h  input_parameters_data.h  output_parameters_data.h
src/presenter/: main_presenter.cpp  main_presenter.h
src/scanner/: methods_scanner.h
src/view/: input_parameters_widget.cpp  main_window.cpp  main_window.h  main_window.ui  output_parameters_widget.cpp  output_parameters_widget.h
src/view/factories/: component_factory.cpp
